--- a/index.html
+++ b/index.html
@@ -11,12 +11,15 @@
 
     <div id="container">
         <div id="fundoGame">
-            <div id="inicio"><h1>Resgate</h1>
+            <div id="inicio" onclick="start()"><h1>Resgate</h1>
             <p>Utilize a tecla W para movimentar o helicóptero para cima, a tecla S para movimentar o helicóptero para baixo e a tecla D para atirar.</p>
             <p> Clique aqui para iniciar!!</p>
             </div>
         </div>
     </div>
 
+    <script type="text/javascript" src="js/jquery-3.6.0.min.js"></script>
+    <script type="text/javascript" src="js/jquery-collision.min.js"></script>
+    <script type="text/javascript" src="js/js.js"></script>
 </body>
 </html>
